--- a/jackson-mongodb/pom.xml
+++ b/jackson-mongodb/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-web-parent</artifactId>
-        <version>2.5.0</version>
+        <version>2.5.1-dev</version>
     </parent>
     <artifactId>jackson-mongodb</artifactId>
     <url>https://github.com/timboudreau/giulius-web</url>
