--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>jackson</module>
         <module>statistics</module>
         <module>email-service</module>
-        <module>statsd-aop</module>
+<!--        <module>statsd-aop</module> -->
         <module>jackson-jodatime</module>
         <module>jackson-mongodb</module>
         <module>email-base</module>
