--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>giulius-web-parent</artifactId>
     <url>https://github.com/timboudreau/giulius-web</url>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>3.0.0-dev</version>
         <relativePath/>
     </parent>
     <name>Giulius Web Parent</name>
@@ -19,7 +22,7 @@
         <module>jackson</module>
         <module>statistics</module>
         <module>email-service</module>
-        <!--        <module>statsd-aop</module> -->
+<!--         <module>statsd-aop</module>  -->
         <module>jackson-jodatime</module>
         <module>jackson-mongodb</module>
         <module>email-base</module>
@@ -28,15 +31,18 @@
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius-web/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius-web.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius-web.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -44,6 +50,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
