--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <name>Email Sender</name>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>email-server</artifactId>
+
     <url>https://github.com/timboudreau/giulius-web</url>
+
     <properties/>
+
     <dependencies>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
@@ -54,20 +64,24 @@
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-multibindings</artifactId>
         </dependency>
+
     </dependencies>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius-web/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius-web.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius-web.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -75,6 +89,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -82,4 +97,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
