--- a/giulius-servlet/pom.xml
+++ b/giulius-servlet/pom.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>giulius-servlet</artifactId>
+
     <url>https://github.com/timboudreau/giulius-web</url>
     <name>Giulius Servlet</name>
+
     <dependencies>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
@@ -37,20 +47,24 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius-web/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/giulius-web.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius-web.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius-web.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -58,6 +72,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -65,4 +80,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
