--- a/statistics/pom.xml
+++ b/statistics/pom.xml
@@ -36,6 +36,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>util-function</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util-misc</artifactId>
         </dependency>
         <dependency>
